fixed: form, input on tablet; added: links to location, tel

--- a/src/styles/blocks/contact.scss
+++ b/src/styles/blocks/contact.scss
@@ -22,7 +22,7 @@
     }
   }
 
-  @include onDesctop {
+  @include onTablets {
     &__title {
       display: flex;
       margin: 0 auto;
