--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -43,10 +43,23 @@
 
     transition: color 1s;
 
-    margin-bottom: 50px;
-
     &:hover {
       color: aqua;
+    }
+
+    &-text {
+      display: block;
+      font-family: "Raleway", sans-serif;
+      text-decoration: none;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 150%;
+
+      color: #f1f5f4;
+    }
+
+    &-mail {
+      margin-bottom: 50px;
     }
   }
 
