--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -51,7 +51,7 @@
       content: "";
       display: flex;
       align-items: center;
-      height: 4px;
+      height: 8px;
       width: 8px;
 
       background-position: center;
