--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -15,22 +15,20 @@
   }
 
   &__languages {
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 150%;
-
     display: flex;
-    align-items: center;
-    text-align: center;
-
+    flex-direction: row;
     color: #f1f5f4;
+    font-family: "Raleway", sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    text-decoration: none;
 
     &::after {
       content: "";
-      display: block;
-      height: 4px;
-      width: 8px;
+      display: flex;
+      align-items: center;
+      height: 50px;
+      width: 50px;
 
       background-position: center;
       background-size: contain;
