--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -19,12 +19,12 @@
   }
 
   &__nav {
-    display: grid;
-    grid-template-columns: 1fr 80px;
+    display: flex;
+    justify-content: space-between;
     margin-bottom: 80px;
     justify-items: auto;
     align-items: center;
-
+    
     @include onTablets {
       margin-bottom: 50px;
     }
